@@ -8,16 +8,16 @@ DIST gnupg-2.0.22.tar.bz2 4277117 SHA256 437d0ab259854359fc48aa8795af80cff4975e5
 DIST gnupg-2.0.23.tar.bz2 4297195 SHA256 cf196b8056eafb4236f000a3e12543e0022a1fec4d6edff1b91b48936c109841 SHA512 5982b25a470b8e6c2874cfadbd2da7db7fb219b5a0be254d73772488b47e2fa1b3825c6640c3659e27905d56d53eaffd34728540081ff160bffea80678d37847 WHIRLPOOL 95184a59be90de483be82b064e8222be0957b0d17466ba80de5b6d8cd8774ca9a3fd83ac967437e4b296905f06ca0f0b2e446fa905ef5871ab1492c7db7e1b3b
 DIST gnupg-2.0.25.tar.bz2 4301689 SHA256 b3abe97df096cf53d6a422ac922f3c48e688bc892b7ccf669b92f0b7fc6c5823 SHA512 8b80c86ec53ed3b82d15a8e316baf175691e06e1bcac28d66c61fd37d07e26196a7ee7855e6eb958c301cee764866cc3cf00e5ec0aef23abddf7427bb3d23fb1 WHIRLPOOL 786f3db3af0c96249e128ce3a30dee7e9fbec38d75ed29138f0dfdcbe4f4377c39d4152844087cec0147921eed73c1a01382b542c6a27e86e8bd9265f67e65e2
 EBUILD gnupg-1.4.16.ebuild 3763 SHA256 7dd32d6bf5cac515edfaf32f6d8e5c218248490ed02d7a2681102b685ba1a97d SHA512 c5e52a81459c6fa99c3b875b1a17999076d4de49244fae3c195c129629b4b52d416c93faeec4e216b5daf7616db72809d213a1c6697c532571cb2ceab1c985e6 WHIRLPOOL cf45f4061edaa1bb984dc73b7656be6622900c54417d2f5b2571b0d9726f9f56329e2dc41a1346c3b3918c6ebdcbe1b52cb0ad61f093f46e9865dd38ac8423b5
-EBUILD gnupg-1.4.18.ebuild 3774 SHA256 9293d3c1ecdc8c7bd2f164fe2e7b7e885365193c219ddd6dea1726d516933b61 SHA512 6a258357a0aef4739c1eb44e5cb67aec53557f2de91028a267fa8d9f5e422586cec511a3766e8e425ccee27d947feb57082c46a40d56c1ef33ea73a31a195aa5 WHIRLPOOL 13d9527ef8008ef9ae2370200c1322b5ba2b877dc9dd7ac04ebb03c2dd77fcad4f1149e37dc751c3398343c5b8ce9535f2633eb4042298b835fe70b05b53cb53
+EBUILD gnupg-1.4.18.ebuild 3770 SHA256 f117da04fe6529bdb0fd6f032a702253d618828ec5af532d34f7cd37eda38059 SHA512 aac4d56cf53b37b7b7345adb25693bbed906459ef88a14319b326d51db460b9ab0ae42c8946ca8c6cdf871ec1bb15c4380bea7e3f8d8839ea4f5e3daf6cdb657 WHIRLPOOL c849950b599af423b47bd14ae7adb019b13f9742c88247ec147c2e0d5439a22810960da5b6df3d6a8ae5d5895bbf0859929052314fea70b12dace03f4ffc31b9
 EBUILD gnupg-2.0.22.ebuild 4736 SHA256 0dc9e63ae57b6859b62714a593359e9c2fa7097a17c2ad93675d597d5b0aea29 SHA512 2f4ea65dafb1e957c165dd684c3279e287ac9ca94eee87da6390ae6c4ad2a99d3791a82597850e2da0725e2de6a0a7d3e6d1192c250f02fe81fe5f78ad1a59bf WHIRLPOOL 3e6ed2773f428e32af127fa09968a066e41564831487bb06ed403467408fa11e9ca6a10a3d7bd4228b0fb3002909e296551948ec77bc934b3ada37ac90028a7b
 EBUILD gnupg-2.0.23.ebuild 4753 SHA256 7be212cef871ea9bd5c044b97679d123ee5c3b1dd30121851576740a826cb500 SHA512 f1d90cff4d82bbeb07b8f566e368d4be11ef9569f64187711de994ed25290e8b21badceb5291bbb6682f141b91cfaea41a8fb205fb5da0de97535aa1e107c6fd WHIRLPOOL 466e2f787423efdd2333cf64620a61f551c075ef95674cd513b02de6a7c89ca633487de119df0d84ae3a2c55ff2e9c7a424aea61a51d11a24ac1a68e93344e86
-EBUILD gnupg-2.0.25.ebuild 4750 SHA256 5d9c603f55ad4ef75951bfe8960e05ba97006bb3450696744f28b0eb37d125aa SHA512 5870528aaa11bff76c8b526c445c2cbea687c4579eab15eb562aed64e76dae91b92f177ef4d88aa18503bdf21e06051789967e614e07fd980135c52e7d5f37f7 WHIRLPOOL 3019b990d3b935a43d326ae380dabb2d026da2552855621caba7dde567f809946c82a91b90eeb7544d23a0e0b507a792f6b53171af2704080bed019a28098135
-MISC ChangeLog 76679 SHA256 c3d5741cb74de7500b0679e4713eb8294398816477f511b0e41a70c404571625 SHA512 8b21d40b61565ad6279d4bb41ed53d7fdf5123570933051c37ffc9756ede920da34587efaed1c9cbefb8c87b15164ae618e46644e8cbb3d931b457361c37f377 WHIRLPOOL 849792216455883d2e3377dffb542c30901259650f64ec5210bae64e75b04dc82138ce5012544cc603453150dee87a3e2dad523e8c2e94e7a8d8b1b07194c159
+EBUILD gnupg-2.0.25.ebuild 4746 SHA256 a11263221a0b7ba0d089afc83f7c26a0c52d76027385456c044997ec717bef43 SHA512 adb2642016a5c1d26052a625887ec611f738468e8e81bfc68a8f353e6f8e0246d854a5a989be989c1db3b36460e90a237f3c2e189933a9e17e5571c704d1274a WHIRLPOOL 8cf56609c6fc4fd264e49ee07f6171eb19be9f9013d732523c1e0aef6d9f88e7c88067d06dba948e37347d730898785b4d94055f614a7c35040ee7237ddfba04
+MISC ChangeLog 76880 SHA256 bd3143ae6e48401c7da0f770f026280bd4463f5a842092f0edee1a486340d5bc SHA512 a435f6e08955aa4333de7696ea48b5172cefb4770cafa09abd0861cd939e32cf24d4bcc696ce0629bf836eef8a7dc859b84de7e7d4ce48a1a9556acb78a1f891 WHIRLPOOL 8cb706bb3e5e8fa9606a8f7d519ff3337bed528b9afcfa5018c6613ec8d1d3d0058315855ca5a585c7043fe40383aac86df2f289a85e0892338ff31dc2724e91
 MISC metadata.xml 1078 SHA256 6d0df2861d7b3fc7777f9c703b06f789a8e4e4d08a98b1f5f5cc661943a5b7e0 SHA512 2998315ea1dad11806385d84827189efb626620d6596bf51a67180567a5ed3cbcb5eea50de907477b93d876ce66fb7e944cce159fe29450a301cda9bdd76db87 WHIRLPOOL fc0761ee1950b067a4434192c22b3d516017b539694e3615f9429ad8b05ace449e8d9abf01086baf91eb93cb9ad4fe2c37467b0313ccaf0411a99be63a7440e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlOxsw8ACgkQXYk9GL8g3FF3OQD/R4RheZq6WSahqo7n7OBvaz6f
-DYoxl0PcKDEV9xxMltIA/0Z4u2jjdI6CR4aiyBEZdffOCsInGZKgafu5BGVAwMpi
-=+pZ3
+iEYEAREIAAYFAlOyDKQACgkQVWmRsqeSphPwGwCfU9d5kW5vEIrEk24SSM1DKLIP
+4KkAn1PJiqzQQtqLOpOghhpEbl9QU2Ef
+=NT+A
 -----END PGP SIGNATURE-----
