@@ -3,26 +3,22 @@ Hash: SHA256
 
 DIST gitolite-2.3.1.tar.gz 255807 SHA256 53303fea0154914356830202d3de23f94682bab26197ead8ca05d58818c56e82 SHA512 a658104b54ff6668022a6010b961fbe13b8e7a66242d547e0e4cf685574d8a1fd60065112095b0d73b826f6346973cb3a5db307d84fd5aceba852f2ddd0c86ee WHIRLPOOL 5d08b9c22e6a07478836cca3b7190b61729ef89e181e4746286a4cf48f253fe07647b165f22483d983bae1767d83b39f231414dc96b4e803140f64eb244fc241
 DIST gitolite-3.5.3.1.tar.gz 148133 SHA256 688b7f0f93792ae87c6c15d9ba9ba2a16c05a3df4813359e13a40f9ebe35ac58 SHA512 4a40b82f63886430fbd87fe9ba9f3cd70102909b41e1344215d78ed7e698cf5f094658c7bb0e1f07542cee94c88f703766535d749e348c022f39b4516cd0009e WHIRLPOOL e03965eaa6677f1391ad92bedf630929ce155b708981857b539ee8b8264b450cdd730186ac010fdc0fba594a29128cd4322340b41a9212803455729b62bbde17
+DIST gitolite-3.6.1.tar.gz 165506 SHA256 7ee03d715cc4d87c0b6dbca5d79daf6f50f657ab33b99da256d7ab02cefe3f6a SHA512 b568f9e96ddfa4cd482197a89cb0142fcb2717028227a0a2e9caa9864bb95379042ec464352a1d99dfd8ccff780b1211e8f926ad8de284245fc280038eda481a WHIRLPOOL 9101ba55ba1a94b53ba3e9421d170d5b650e3e72c390abb3aea186630638b4fa6b8a5d69d9553ed574444be00f263dabcfe11e63f89f2eb3787ab8765e67c4ce
 DIST gitolite-3.6.tar.gz 156481 SHA256 ae9180a180a05cad344788eadc8340d6ebcb4cc60d96a1f5ab5fc355d395ba4b SHA512 91606a5fed202f0da2194310bc7da8e5d35cdfa2924b009ed3447ba41e2fd856b9043f1b57d16600ec44f17d640e9ee988b4086bea032827bf5fca83e5ff024f WHIRLPOOL 79b3a553dd25db9a3e99d7725c0932bb0b126f30bd013b9cc53d69f60d0c906eac4134b25f6759d9635e50df3324d731f16c30fb44c25e89df7e35560a3e00b1
 EBUILD gitolite-2.3.1.ebuild 1761 SHA256 4197fd9663fe323975518cd966c1495ae026462d54fe4211ba9f342ac854d21d SHA512 d829a490204bc4b4247c0e6cf6d92e33e794886072c0109cc190acaea5695b3660a261d0632feaaaeec1cd5dcbd8c299eff57341d62de0f999b6d1d5be64dc2e WHIRLPOOL a478bf6b6215a65def419fb83855026dbf9e2e253f31ae518bbea39f4fde653f4ae838a4a404a085311f45200133a197da5004d31b3d96a7ec743b9feca5fa6a
 EBUILD gitolite-3.5.3.1.ebuild 1975 SHA256 9cb4c5a2a24685dd18e7b220ed88bd31f5c6fd1672dabf1ff2c08a2a81a9dee0 SHA512 c83c6b60ea3c12e4d2ae89840efc806845d2a4bfc7ce50588d296d9ea43e178a87a2fa804486e369f7713a614dbc219ae3138b564b79bcdc1bacd173bfc3fe66 WHIRLPOOL 44465f74d3325c45b58fb57f1b9dbc842eb6d6268e016c66895e43e721f384b411c715305398b70714c837566a53f8fddaa4148e403595482159b80f5e12974f
+EBUILD gitolite-3.6.1.ebuild 1980 SHA256 79fd413531a89af4411351b15a272273d30e1f64f23fd403b5453302d211c393 SHA512 cb6a482e355491b08228957d665f4dc6f40aa41a5f0f1db57bb91ba63c465ac98e00cc5c31838954a916c592afb109d92fffc8b23ba80501e6da99f8beb3f924 WHIRLPOOL 5e022dc0bc19890d16e7216b0d1eaaac1ca15c0963f7d43191637a72b2303ff32da83b2c9a5c8dbcec1f7e09538259d2744e09cb146c6918dc56e3b31734b667
 EBUILD gitolite-3.6.ebuild 1977 SHA256 402d5c33919f13edec9f2be820eb2ccfabc5796d16d66b6d7de2f8e90c09266d SHA512 ddfe486198955589837ff4df651379ac9b7def379ea508f4f51be87734a77f1bf3482838e96a0310d40e02798b0b492c4d498d2e64b234c8b64bc8b72117d09a WHIRLPOOL d4510b9951a6e5f51953e15fb7b45df04244506cd160c8e57240e24927cffd912fa05c1baec60caaba728183a1996e9312158d522b4635ce7728197956e43eb7
-MISC ChangeLog 6214 SHA256 2eb8291212a50bc34db0ae709f44b7235294850d7afbb9b5fdcdb13803854a89 SHA512 2b207d0ec638e2308276419f6e8a159c39b0e9c8b8ddbf9150f2732c4b8448b3ac4109e9d136a683ed7bf018b8237c847bcf8110427809656da264897abd8b3f WHIRLPOOL 1539b218cc7ffe5fe375c05d178d4d27e7ebeb5a65f147ecb62643205598d6a835bb16af9d7021fea9f30d24bcb292a5c91080ff0a7b516a4527977040806879
+MISC ChangeLog 6348 SHA256 8e06d634b4fe0f04872be388e767f3f3d4432ed93b90d61cb19715b275e3bb1d SHA512 f4901bf2adc6177c9e62b5dce9e79b3fe6ee673aba628ee8774968b627d755162847de815809adc55bf865466ca0e152b3990af745f63cb7f8558e78f478fde4 WHIRLPOOL 4c551b9c14bd6c8d7b28b0487ba24c28e9562c11c1b482d042631220630b77e40213a3464c6935e5f52cf0f21defb5960684de90db4835c22e30f0e2adce8807
 MISC metadata.xml 682 SHA256 18d0866ea7ff65085f758309dcd2d624558e5324ac754ecdb3db0a7c0153dbc7 SHA512 6ebad19229eed70cb9c53dc11ae850eb376bb7d58c0d039bd3f12d9a8d0d4ebdf749b28ee601dfefa2e6e9b9bc4d37bbed7da56b787fa87f0720ed199110f401 WHIRLPOOL 002c556a8b8276910a815ee5e387820fd7d5f575012edbc11503303d846397cad43a5cfa6e762b312728ba6cbbf2fabfc9f7251ec783f1c21272db84429b122a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTnB6lAAoJEE8aJVXqcZkdv54P/jIi6OhzbrooROkTntrPnQFk
-N9kJt8olUlfIb27ptdOtfwbFISjbarJ1IOvE0CUCTptpVYirVJV+3xPDkNmJucRV
-CRjqD1isg6HjO8gYqoYjhBiHklQEesYvqfnjC0AXUrC8AzO02yySyibLCM6AfZvN
-/8Gj9aQ62R5DTCgSR8qB6nH1ZDd6Y5veVt3iSdqL44ZYDn17no9Kw/3FTu2hXMM8
-/RZbdX7rxxQQQddSJEVpSQz4hFqf/MErSC8Lcue4eg4TLqTiSvJKgzusF/PJgt1n
-/e7KeQJuFzu8c8h+lWxOLvRaNQK6sVIysf6TzlTX48g3PTIAWoTk9Ku8b5lbkLbJ
-6/DDyrr0/tiBm3+GB3SPDXPDzA28nM5e/qL0yh14T3JqfqmSn4i1NkLQNl6+a3x8
-P2D8iWQIQuJ3xrWNFPFS7MMZp7JnNGMb7lSwg9nibEendd/2ekB/uiUWjcbsOs6h
-sppP3HZvPxVju9rvQnaZMkr3W/RdtGPV5uTltJx/ZijJuhoiqhlO2NudKB3DIVBf
-HUV6wJw9EZ6MIUD5WWHF/FtbjsW1LuPimfvQpPKOddRDfRDWj+YwhWajwAwnNmTs
-8OuG4EtVZMVUZbNFCSaisXpxxrtzXq0n5JFz9XJ36FfMSuzJq89SNXHCHgz4NhoW
-w+OunnHGmwWOhlBjL2gm
-=2IsN
+iQEcBAEBCAAGBQJTsg1GAAoJEEqz6FtPBkyjWssH/1//QpcydVcajWZSNSUImHZG
+qPNW5FSDhXOfPA2sQEmjB62BzCSjP8P8CdpeQuShmmH6V9vn+42+WDxthDeeD5vN
+gDfLdJYZiKtA9638jabLu8GcAhsNVsY62OFSk1CYPQZOf0zMngFVdSnmB324GlZn
+gfgxK6EQJkAqiNqboNJmpn6rIOlwRcB1HWQGBVCAj3/GtlCJAWSk/I6I1XJlQiAE
+v3+nU2mVd1Wfha3nyOw08J9omlZ8SHo/w+sJeMpsmkMqZzj8JHcoyfpFI2pl79L/
+M5klUsy3jixz1Uq5fM6/RM/jU9BcVoeiXINo6TUG/SazSGNkpOgn+/onRrLNC1k=
+=3bXH
 -----END PGP SIGNATURE-----
