@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/gitolite
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.42 2014/06/14 10:06:28 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/gitolite/ChangeLog,v 1.43 2014/07/01 01:22:11 radhermit Exp $
+
+*gitolite-3.6.1 (01 Jul 2014)
+
+  01 Jul 2014; Tim Harder <radhermit@gentoo.org> +gitolite-3.6.1.ebuild:
+  Version bump (bug #515892).
 
   14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> gitolite-3.6.ebuild:
   x86 stable wrt bug #457924
